# framepace

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: docs.yml  publish.yml  test.yml
src/: lib.rs  phase.rs  stats.rs  timer.rs
src/time/: mod.rs  std_time.rs
